--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0-261.0.dev <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,6 +37,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.3.0
   cached_network_image: ^3.2.3
+  google_sign_in: ^6.1.4
+  firebase_core: ^2.15.0
+  flutter_facebook_auth: ^6.0.0
+  firebase_messaging: ^14.6.5
+  flutter_local_notifications: ^15.1.0+1
+  device_info_plus: ^9.0.3
+  firebase_crashlytics: ^3.3.4
+  upgrader: ^8.1.0
+  flutter_screenutil: ^5.8.4
+  image_picker: ^1.0.2
 
 
 dev_dependencies:
